--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - uses: benmatselby/hugo-deploy-gh-pages@main
+      - uses: benmatselby/hugo-deploy-gh-pages@master
         env:
           HUGO_VERSION: 0.98.0
           HUGO_EXTENDED: true
